ferric/tests/ui/semantic_err_02.stderr
error: duplicate query of variable `rain`
  --> tests/ui/semantic_err_02.rs:28:11
   |
28 |     query rain;
   |           ^^^^
